// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className=" productCard undefined "
>
  <span
    className="productDescription undefined"
  >
    Coffee Con Imagen
  </span>
</div>
`;

exports[`ProductTitle Debe mostrar el componente correctamente co el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
